move .active to link

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -916,7 +916,7 @@ $(window).ready(function() {
             <div class="bs-example bs-example-tabs">
                 <ul id="myTab" class="nav nav-tabs">
                     <li class="nav-item"><a href="#tabpanel1" class="nav-link" data-cfw="tab">Tab 1</a></li>
-                    <li class="nav-item active"><a href="#tabpanel2" class="nav-link" data-cfw="tab">Tab 2</a></li>
+                    <li class="nav-item"><a href="#tabpanel2" class="nav-link active" data-cfw="tab">Tab 2</a></li>
                     <li class="nav-item"><a href="#tabpanel3" class="nav-link" data-cfw="tab">Tab 3</a></li>
                     <li class="nav-item"><a href="#tabpanel4" class="nav-link disabled" data-cfw="tab">Tab 4</a></li>
                     <li class="nav-item"><a href="#tabpanel5" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5">Tab 5</a></li>
