--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -34,8 +34,8 @@
     <nav class="navbar navbar-light bg-faded">
         <a class="navbar-brand" href="#">Navbar</a>
         <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -58,8 +58,8 @@
         <div class="navbar-group">
             <a class="navbar-item navbar-brand" href="#">Navbar</a>
             <ul class="navbar-item nav navbar-item-max navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
@@ -83,8 +83,8 @@
         <div class="navbar-group navbar-group-flex">
             <a class="navbar-item navbar-brand" href="#">Navbar</a>
             <ul class="navbar-item navbar-item-max nav navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
@@ -111,8 +111,8 @@
         <div class="navbar-group navbar-group-justified">
             <a class="navbar-item navbar-brand" href="#">Navbar</a>
             <ul class="navbar-item nav navbar-nav text-center">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
@@ -139,8 +139,8 @@
         <div class="navbar-group navbar-group-justified navbar-group-flex">
             <a class="navbar-item navbar-brand" href="#">Navbar</a>
             <ul class="navbar-item nav navbar-nav text-center">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Features</a>
@@ -168,8 +168,8 @@ normal:
     <div class="navbar-group">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item nav navbar-item-max navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -193,8 +193,8 @@ flex:
     <div class="navbar-group navbar-group-flex">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item navbar-item-max nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -218,8 +218,8 @@ justified:
     <div class="navbar-group navbar-group-justified navbar-group-flex">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item nav navbar-nav text-center">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
