--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2088,14 +2088,14 @@ Anchor variants:<br />
 <h3>Pagination disabled and active states</h3>
 <nav aria-label="...">
   <ul class="pagination">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
+    <li class="page-item">
+      <a class="page-link disabled" href="#" tabindex="-1" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item active">
-      <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+    <li class="page-item">
+      <a class="page-link active" href="#">1 <span class="sr-only">(current)</span></a>
     </li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
@@ -2111,13 +2111,13 @@ Anchor variants:<br />
 </nav>
 <nav aria-label="...">
   <ul class="pagination">
-    <li class="page-item disabled">
-      <span class="page-link" aria-label="Previous">
+    <li class="page-item">
+      <span class="page-link disabled" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </span>
     </li>
-    <li class="page-item active"><span class="page-link">1 <span class="sr-only">(current)</span></span></li>
+    <li class="page-item"><span class="page-link active">1 <span class="sr-only">(current)</span></span></li>
   </ul>
 </nav>
 
