simplify tab-responsive for the time being

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -890,8 +890,8 @@ $(window).ready(function() {
                 </nav>
                 <div class="tab-content">
                     <div class="tab-pane" id="tabr0">
-                        <h3><a href="#" data-cfw="collapse" data-cfw-collapse-toggle="tabr0_collapse">First Tab <span class="caret"></span></a></h3>
-                        <div data-cfw-collapse-target="tabr0_collapse">
+                        <h3><a href="#tabr0_collapse" data-cfw="collapse">First Tab <span class="caret"></span></a></h3>
+                        <div id="tabr0_collapse">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non nisi ipsum. Quisque feugiat, arcu in pulvinar varius; risus odio interdum diam; a hendrerit urna sem vitae enim. Aenean fermentum iaculis nibh sodales consectetur.</p>
                         </div>
                     </div>
