allow for slider dipose test

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -210,7 +210,7 @@ $(window).ready(function() {
             <strong>Single Slider:</strong>
             <div class="slider-sample">
                 <form class="form-inline">
-                    <div id="slider0">
+                    <div id="slider0" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
                         <div class="form-group">
                             <label id="slider0_0_Label" for="slider0_0">Value</label>
                             <input id="slider0_0" type="text" class="form-control" value="50" />
@@ -218,6 +218,7 @@ $(window).ready(function() {
                     </div>
                 </form>
             </div>
+            <!--
             <script type="text/javascript">
             $('#slider0').CFW_Slider({
                 min : 0,
@@ -225,6 +226,7 @@ $(window).ready(function() {
                 step : 1
             });
             </script>
+            -->
 
             <strong>Double Slider</strong>
             <div class="slider-sample">
