--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1321,15 +1321,15 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Form validation</h3>
 <div class="form-group has-success">
   <label class="form-control-label" for="inputSuccess1">Input with success</label>
-  <input type="text" class="form-control form-control-success" id="inputSuccess1">
+  <input type="text" class="form-control form-control-icon" id="inputSuccess1">
 </div>
 <div class="form-group has-warning">
   <label class="form-control-label" for="inputWarning1">Input with warning</label>
-  <input type="text" class="form-control form-control-warning" id="inputWarning1">
+  <input type="text" class="form-control form-control-icon" id="inputWarning1">
 </div>
 <div class="form-group has-danger">
   <label class="form-control-label" for="inputDanger1">Input with danger</label>
-  <input type="text" class="form-control form-control-danger" id="inputDanger1">
+  <input type="text" class="form-control form-control-icon" id="inputDanger1">
 </div>
 
 <div class="form-check has-success">
