v3 - Improve .btn-group and .btn-toolbar flexbox support

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -67,13 +67,13 @@ Holder.addTheme("gray", {
 
     normal:
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group" role="group" aria-label="First group">
+        <div class="btn-group mr-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
             <button type="button" class="btn">2</button>
             <button type="button" class="btn">3</button>
             <button type="button" class="btn">4</button>
         </div>
-        <div class="btn-group" role="group" aria-label="Second group">
+        <div class="btn-group mr-0_5" role="group" aria-label="Second group">
             <button type="button" class="btn btn-primary">5</button>
             <button type="button" class="btn btn-primary">6</button>
             <button type="button" class="btn btn-primary">7</button>
@@ -85,14 +85,14 @@ Holder.addTheme("gray", {
     <br />
 
     flex:
-    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group btn-group-flex" role="group" aria-label="First group">
+    <div class="btn-toolbar btn-toolbar-flex" role="toolbar" aria-label="Toolbar with button groups">
+        <div class="btn-group btn-group-flex mr-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
             <button type="button" class="btn">2</button>
             <button type="button" class="btn">3</button>
             <button type="button" class="btn">4</button>
         </div>
-        <div class="btn-group btn-group-flex" role="group" aria-label="Second group">
+        <div class="btn-group btn-group-flex mr-0_5" role="group" aria-label="Second group">
             <button type="button" class="btn btn-primary">5</button>
             <button type="button" class="btn btn-primary">6</button>
             <button type="button" class="btn btn-primary">7</button>
