--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1771,13 +1771,13 @@ Anchor variants:<br />
 
 <h3>Button toolbar</h3>
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group" role="group" aria-label="First group">
+  <div class="btn-group mr-0_5" role="group" aria-label="First group">
     <button type="button" class="btn">1</button>
     <button type="button" class="btn">2</button>
     <button type="button" class="btn">3</button>
     <button type="button" class="btn">4</button>
   </div>
-  <div class="btn-group" role="group" aria-label="Second group">
+  <div class="btn-group mr-0_5" role="group" aria-label="Second group">
     <button type="button" class="btn">5</button>
     <button type="button" class="btn">6</button>
     <button type="button" class="btn">7</button>
