v3 - Inline forms: add flexbox support

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -37,7 +37,7 @@ Holder.addTheme("gray", {
     <h1>Button Group</h1>
 
     <p>
-        Here we are testing the two different styles for input group layouts using the opt-in flexbox classes.
+        Here we are testing the two different styles for button group layouts using the opt-in flexbox classes.
         They are designated as follows:
     </p>
     <ul>
