Update example and test

--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -409,9 +409,9 @@
 
     <h2>Vertical Flex Alignment</h2>
 
-    <div class="row row-flex flex-top">
+    <div class="row row-flex flex-items-start">
         <div class="col">
-            <code>.flex-*-top</code>
+            <code>.flex-*-items-start</code>
         </div>
         <div class="col">
             1 of 3
@@ -421,9 +421,9 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-middle">
+    <div class="row row-flex flex-items-center">
         <div class="col">
-            <code>.flex-*-middle</code>
+            <code>.flex-*-items-center</code>
         </div>
         <div class="col">
             1 of 3
@@ -433,9 +433,9 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-bottom">
+    <div class="row row-flex flex-items-end">
         <div class="col">
-            <code>.flex-*-bottom</code>
+            <code>.flex-*-items-end</code>
         </div>
         <div class="col">
             1 of 3
@@ -445,9 +445,9 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-stretch">
+    <div class="row row-flex flex-items-stretch">
         <div class="col">
-            <code>.flex-*-stretch</code>
+            <code>.flex-*-items-stretch</code>
         </div>
         <div class="col">
             1 of 3
