--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -338,10 +338,11 @@ $(window).ready(function() {
             <br />
             <br />
 
-            <div class="row">
-                <div class="col-sm-6">
+            <div class="row mb-1">
+                <div class="col-12">
                     <strong>Checkbox:</strong>
-                    <br />
+                </div>
+                <div class="col-sm-6">
                     <div class="btn-group" data-cfw="buttons">
                         <label class="btn btn-info" id="btnTog1">
                             <input type="checkbox" checked /> Check 1
@@ -357,11 +358,26 @@ $(window).ready(function() {
                     <a href="#" onclick="$('#btnTog1').CFW_Button('toggle'); return false;">Toggle 1</a>
                     <a href="#" onclick="$('#btnTog2').CFW_Button('toggle'); return false;">Toggle 2</a>
                     <a href="#" onclick="$('#btnTog3').CFW_Button('toggle'); return false;">Toggle 3</a>
-
                 </div>
                 <div class="col-sm-6">
+                    <div class="btn-group" data-cfw="buttons">
+                        <label class="btn btn-outline-info" id="btnTogO1">
+                            <input type="checkbox" checked /> Check 1
+                        </label>
+                        <label class="btn btn-outline-info" id="btnTogO2">
+                            <input type="checkbox" /> Check 2
+                        </label>
+                        <label class="btn btn-outline-info" id="btnTogO3">
+                            <input type="checkbox" /> Check 3
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-1">
+                <div class="col-12">
                     <strong>Radio:</strong>
-                    <br />
+                </div>
+                <div class="col-sm-6">
                     <div class="btn-group" data-cfw="buttons">
                         <label class="btn btn-info">
                             <input type="radio" name="options" checked /> Radio 1
@@ -375,6 +391,21 @@ $(window).ready(function() {
                     </div>
                 </div>
                 <div class="col-sm-6">
+                    <div class="btn-group" data-cfw="buttons">
+                        <label class="btn btn-outline-info">
+                            <input type="radio" name="options" checked /> Radio 1
+                        </label>
+                        <label class="btn btn-outline-info">
+                            <input type="radio" name="options" /> Radio 2
+                        </label>
+                        <label class="btn btn-outline-info">
+                            <input type="radio" name="options" /> Radio 3
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-1">
+                <div class="col-12">
                     <strong>Buttons:</strong>
                     <br />
                     <div class="btn-group" data-cfw="buttons">
@@ -384,8 +415,6 @@ $(window).ready(function() {
                     </div>
                 </div>
             </div>
-            <br />
-            <br />
 
             <hr />
 
