v3 - Pagination flexbox support

--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
 <title>Figuration - Flexbox Button Group</title>
@@ -11,24 +11,6 @@
 
 <script type="text/javascript" src="../vendor/jquery.min.js"></script>
 <script type="text/javascript" src="../../dist/js/figuration.js"></script>
-
-<script type="text/javascript" src="../../docs/assets/js/vendor/holder.min.js"></script>
-<script type="text/javascript">
-Holder.addTheme("gray", {
-    bg: "#999",
-    fg: "#111",
-    size: 12,
-    font: 'sans-serif',
-    fontweight: "normal"
-});
-</script>
-
-<style>
-
-.input-group {
-    margin-bottom: 1rem;
-}
-</style>
 
 </head>
 <body>
