--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -283,7 +283,7 @@
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
 
         <!-- Add the extra clearfix for only the required viewport -->
-        <div class="clearfix hide-sm-up"></div>
+        <div class="clearfix d-sm-none"></div>
 
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
@@ -298,7 +298,7 @@
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
 
         <!-- Add the extra clearfix for only the required viewport -->
-        <div class="clearfix hide-sm-up"></div>
+        <div class="w-100 d-sm-none"></div>
 
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
         <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
