--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
             </div>
         </div>
     </div>
+  
+    <div style="margin-top: 2rem; margin-bottom: -2rem; padding: 2rem 0; background-color: #47a;">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 push-sm-2 col-md-6 push-md-3">
+                    <a class="twitter-timeline" data-height="300" data-chrome="nofooter" data-aria-polite="assertive" href="https://twitter.com/figuration_org">Tweets by figuration_org</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </main>
 
