--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -90,6 +90,36 @@ flex:
 <hr />
 
 normal:
+<div class="form-group">
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon7">@</span>
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon8">
+  </div>
+</div>
+<div class="form-group">
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon8">@</span>
+    <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon8">
+  </div>
+</div>
+
+flex:
+<div class="form-group">
+  <div class="input-group input-group-flex">
+    <span class="input-group-addon" id="basic-addon9">@</span>
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon9">
+  </div>
+</div>
+<div class="form-group">
+  <div class="input-group input-group-flex">
+    <span class="input-group-addon" id="basic-addon10">@</span>
+    <input type="password" class="form-control" placeholder="Password" aria-describedby="basic-addon10">
+  </div>
+</div>
+
+<hr />
+
+normal:
 <div class="input-group">
   <span class="input-group-addon">$</span>
   <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
