Fix .form-control-static default height dim

--- a/test/visual/forms.html
+++ b/test/visual/forms.html
@@ -245,6 +245,40 @@ Holder.addTheme("gray", {
     </select>
 </div>
 
+<hr />
+
+<h3>Static and Label Sizing:</h3>
+<div class="form-group row">
+    <label class="col-sm-2 form-control-label form-control-label-xs">Email</label>
+    <div class="col-sm-10">
+        <p class="form-control-static form-control-static-xs">email@example.com</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 form-control-label form-control-label-sm">Email</label>
+    <div class="col-sm-10">
+        <p class="form-control-static form-control-static-sm">email@example.com</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 form-control-label">Email</label>
+    <div class="col-sm-10">
+        <p class="form-control-static">email@example.com</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 form-control-label form-control-label-lg">Email</label>
+    <div class="col-sm-10">
+        <p class="form-control-static form-control-static-lg">email@example.com</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 form-control-label form-control-label-xl">Email</label>
+    <div class="col-sm-10">
+        <p class="form-control-static form-control-static-xl">email@example.com</p>
+    </div>
+</div>
+
 </div>
 
 </body>
