--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 <body>
     <a class="skipnav" href="#content">Skip to main content</a>
 
-    <header class="navbar navbar-full navbar-dark cf-header">
+    <div class="bg-cyan-500 text-center font-weight-bold p-1">
+<a href="https://figuration-org.github.io/figuration-preview/" class="text-light">Figuration v3 Preview Available!</a>
+</div>
+<header class="navbar navbar-full navbar-dark cf-header">
     <div class="container">
         <nav>
             <a class="navbar-brand" href="/">CAST Figuration</a>
@@ -184,16 +187,6 @@
             </div>
         </div>
     </div>
-  
-    <div style="margin-top: 2rem; margin-bottom: -2rem; padding: 2rem 0; background-color: #47a;">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 push-sm-2 col-md-6 push-md-3">
-                    <a class="twitter-timeline" data-height="300" data-chrome="nofooter" data-aria-polite="assertive" href="https://twitter.com/figuration_org">Tweets by figuration_org</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </main>
 
@@ -207,7 +200,7 @@
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
         </ul>
         <p>
-            &copy; 2013-2016 <a href="http://www.cast.org">CAST, Inc.</a>
+            &copy; 2013-2017 <a href="http://www.cast.org">CAST, Inc.</a>
             <br />
             Portions: &copy; 2011-2016 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://github.com/twbs/bootstrap/blob/master/docs/LICENSE">CC BY 3.0</a>.
         <p>
