--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2787,9 +2787,9 @@ Anchor variants:<br />
 </p>
 
 <h3>Base Navigation</h3>
-<ul class="nav">
+<ul class="nav mb-1">
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
@@ -2801,26 +2801,26 @@ Anchor variants:<br />
     <a class="nav-link disabled" href="#">Disabled</a>
   </li>
 </ul>
-<br />
-<nav class="nav">
-  <a class="nav-link active" href="#">Active</a>
-  <a class="nav-link" href="#">Link</a>
-  <a class="nav-link" href="#">Another link</a>
-  <a class="nav-link disabled" href="#">Disabled</a>
-</nav>
-<br />
 
-<h3>Inline navigation</h3>
-<nav class="nav nav-inline">
+<nav class="nav mb-1">
   <a class="nav-link active" href="#">Active</a>
   <a class="nav-link" href="#">Link</a>
   <a class="nav-link" href="#">Another link</a>
   <a class="nav-link disabled" href="#">Disabled</a>
 </nav>
-<br />
-<ul class="nav nav-inline">
+
+
+<h3>Vertical navigation</h3>
+<nav class="nav nav-vertical mb-1">
+  <a class="nav-link active" href="#">Active</a>
+  <a class="nav-link" href="#">Link</a>
+  <a class="nav-link" href="#">Another link</a>
+  <a class="nav-link disabled" href="#">Disabled</a>
+</nav>
+
+<ul class="nav nav-vertical mb-1">
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
@@ -2834,7 +2834,7 @@ Anchor variants:<br />
 </ul>
 
 <h3>Nav: Tabs</h3>
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs mb-1">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
@@ -2850,7 +2850,7 @@ Anchor variants:<br />
 </ul>
 
 <h3>Nav: Pills</h3>
-<ul class="nav nav-pills">
+<ul class="nav nav-pills mb-1">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
@@ -2865,8 +2865,8 @@ Anchor variants:<br />
   </li>
 </ul>
 
-<h3>Nav: Stacked Pills</h3>
-<ul class="nav nav-pills nav-stacked">
+<h3>Nav: Vertical Pills</h3>
+<ul class="nav nav-pills nav-vertical mb-1">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
@@ -2883,7 +2883,7 @@ Anchor variants:<br />
 
 <h3>Nav: Tabs with Dropdowns</h3>
 <small>Accessibility note: Don't mix CFW_Tab and CFW_Dropdown</small><br/>
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs mb-1">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
@@ -2906,7 +2906,7 @@ Anchor variants:<br />
 </ul>
 
 <h3>Nav: Pills with Dropdowns</h3>
-<ul class="nav nav-pills">
+<ul class="nav nav-pills mb-1">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
   </li>
@@ -2929,7 +2929,7 @@ Anchor variants:<br />
 </ul>
 
 <h3>Navbar</h3>
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2951,7 +2951,7 @@ Anchor variants:<br />
   </form>
 </nav>
 
-<nav class="navbar navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2973,7 +2973,7 @@ Anchor variants:<br />
   </form>
 </nav>
 
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-primary mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2995,7 +2995,7 @@ Anchor variants:<br />
   </form>
 </nav>
 
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-light mb-1" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -3046,7 +3046,7 @@ Anchor variants:<br />
     Toggleable via the navbar brand.
   </div>
 </div>
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded mb-1">
   <button class="navbar-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
@@ -3054,7 +3054,7 @@ Anchor variants:<br />
 
 <h3>Responsive navbar</h3>
 <small>resize screen below 'md' breakpoint</small><br />
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Responsive navbar</a>
   <button class="navbar-toggler d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
