--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -165,7 +165,7 @@ $(window).ready(function() {
 </head>
 <body>
 <header>
-    <div class="navbar bg-inverse">
+    <div class="navbar bg-inverse mb-1">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
