--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -73,12 +73,7 @@ $(window).ready(function() {
     margin-top: 0;
   }
 }
-.sidenav .nav-item +.nav-item {
-    margin-top: 0;
-}
-.sidenav .nav-link {
-  padding: 5px 10px;
-}
+
 .sidenav .active {
   color: #FFFFFF;
   background: #428BCA;
@@ -182,7 +177,7 @@ $(window).ready(function() {
             <!-- Sidebar placeholder -->
             <div class="sidebar">
                 <nav>
-                    <ul class="nav nav-stacked sidenav">
+                    <ul class="nav nav-vertical sidenav">
                         <li class="nav-item"><a href="#slider" class="nav-link">Slider</a></li>
                         <li class="nav-item"><a href="#button" class="nav-link">Button</a></li>
                         <li class="nav-item"><a href="#alert" class="nav-link">Alert</a></li>
