--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2929,9 +2929,9 @@ Anchor variants:<br />
 </ul>
 
 <h3>Navbar</h3>
-<nav class="navbar navbar-light bg-faded mb-1">
+<nav class="navbar navbar-expand navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
-  <ul class="nav navbar-nav">
+  <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
     </li>
@@ -2945,13 +2945,13 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline float-right">
+  <form class="form-inline ml-auto">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
 </nav>
 
-<nav class="navbar navbar-dark bg-inverse mb-1">
+<nav class="navbar navbar-expand navbar-dark bg-inverse mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2967,13 +2967,13 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline float-right">
+  <form class="form-inline ml-auto">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn" type="submit">Search</button>
   </form>
 </nav>
 
-<nav class="navbar navbar-dark bg-primary mb-1">
+<nav class="navbar navbar-expand navbar-dark bg-primary mb-1">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -2989,13 +2989,13 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline float-right">
+  <form class="form-inline ml-auto">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn" type="submit">Search</button>
   </form>
 </nav>
 
-<nav class="navbar navbar-light mb-1" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand navbar-light mb-1" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
@@ -3011,7 +3011,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline float-right">
+  <form class="form-inline ml-auto">
     <input class="form-control" type="text" placeholder="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
@@ -3047,7 +3047,7 @@ Anchor variants:<br />
   </div>
 </div>
 <nav class="navbar navbar-light bg-faded mb-1">
-  <button class="navbar-toggler" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1" aria-label="Toggle navigation">
+  <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar1" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
 </nav>
@@ -3056,7 +3056,7 @@ Anchor variants:<br />
 <small>resize screen below 'md' breakpoint</small><br />
 <nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Responsive navbar</a>
-  <button class="navbar-toggler d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
+  <button class="navbar-toggle d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-toggle="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
   <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
