Flexbox the nav and navbar (#208)
* drop bottom margin

* normalize some heights

* re-order a bit

* make .nav horizontal by default

* update tests

* update sidebar

* flex the navbar

* flexbox the nav

* update tests

* update doc navigation

* additional nav functionality

* rework nav doc page

* example fixes

* brand line-height

* fix divider, dropdown, and breakpoints

* rework navbar docs

* linting

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -73,12 +73,7 @@ $(window).ready(function() {
     margin-top: 0;
   }
 }
-.sidenav .nav-item +.nav-item {
-    margin-top: 0;
-}
-.sidenav .nav-link {
-  padding: 5px 10px;
-}
+
 .sidenav .active {
   color: #FFFFFF;
   background: #428BCA;
@@ -165,7 +160,7 @@ $(window).ready(function() {
 </head>
 <body>
 <header>
-    <div class="navbar bg-inverse">
+    <div class="navbar bg-inverse mb-1">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
@@ -182,7 +177,7 @@ $(window).ready(function() {
             <!-- Sidebar placeholder -->
             <div class="sidebar">
                 <nav>
-                    <ul class="nav nav-stacked sidenav">
+                    <ul class="nav nav-vertical sidenav">
                         <li class="nav-item"><a href="#slider" class="nav-link">Slider</a></li>
                         <li class="nav-item"><a href="#button" class="nav-link">Button</a></li>
                         <li class="nav-item"><a href="#alert" class="nav-link">Alert</a></li>
