--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1398,7 +1398,15 @@ $(window).ready(function() {
             </div>
 
             <h2 id="collapse">Collapse:</h2>
-
+            <div class="well">
+                <label>
+                    Toggle Collapse
+                    <input type="checkbox" data-cfw="collapse" data-cfw-collapse-toggle="#collapseCheck">
+                <label>
+                <div id="collapseCheck" class="collapse">
+                    <p>Fusce vel posuere nulla. Cras urna enim, tristique a diam quis, suscipit euismod ante. Praesent fringilla tincidunt augue facilisis condimentum. Nam eget congue nisl. Sed hendrerit, arcu convallis gravida scelerisque, purus lectus scelerisque enim, nec gravida sapien diam eget sem. In sed sem et diam condimentum malesuada? Nam cursus venenatis posuere. Praesent id purus turpis. Curabitur pretium arcu nec diam interdum, id elementum sapien ultricies. Fusce ornare magna et risus rhoncus; eu consectetur sem vulputate.</p>
+                </div>
+            </div>
             <div class="well">
                 <h3>Multiple Triggers - One Target</h3>
                 <button type="button" class="btn btn-default" data-cfw="collapse" data-cfw-collapse-toggle="multi-collapse">Trigger 1 <span class="caret"></span></button>
